OpaqueAttributeRequestor can now read MS ImmuttableID and convert to GUID vice versa OpaqueAttributeRequestor can be instructed to ignore errors OpaqueAttributeRequestor can output URLSafe Base64